# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb"
version = "0.5.3"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "InfluxDB Driver for Rust"
keywords = ["influxdb", "database", "influx"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/influxdb-rs/influxdb-rust"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"], default-features = false }
futures-util = "0.3.17"
http = "0.2.4"
influxdb_derive = { version = "0.5.0", optional = true }
lazy_static = "1.4.0"
regex = "1.11.0"
reqwest = { version = "0.11.13", default-features = false, optional = true }
surf = { version = "2.3.2", default-features = false, optional = true }
serde = { version = "1.0.104", features = ["derive"], optional = true }
serde_json = { version = "1.0.48", optional = true }
thiserror = "1.0"

[features]
default = ["use-serde", "reqwest-client-rustls"]
derive = ["influxdb_derive"]
use-serde = ["serde", "serde_json"]

# http clients
curl-client = ["surf", "surf/curl-client"]
h1-client = ["surf", "surf/h1-client"]
h1-client-rustls = ["surf", "surf/h1-client-rustls"]
reqwest-client = ["reqwest", "reqwest/native-tls-alpn"]
reqwest-client-rustls = ["reqwest", "reqwest/rustls-tls-webpki-roots"]
wasm-client = ["surf", "surf/wasm-client"]

[dev-dependencies]
indoc = "1.0"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
