# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "influxdb_derive"
version = "0.5.0"
authors = ["Gero Gerke <11deutron11@gmail.com>"]
edition = "2018"
description = "Private implementation detail of the influxdb crate"
keywords = ["influxdb", "database", "influx", "derive"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/influxdb-rs/influxdb-rust"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.9"
quote = "1.0.3"
syn = { version = "1.0.16", features = ["extra-traits", "full"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
future_not_send = "allow"
